Opened 15 years ago

Closed 15 years ago

#4935 closed bug (fixed)

[Mail] missing ellipsis in File menu (easy)

Reported by: luroh Owned by: bga
Priority: normal Milestone: R1
Component: Applications/Mail Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Reading the HIG, I suspect there should be an ellipsis added to File->New Mail Message.

Attachments (1)

mail.png (8.7 KB ) - added by luroh 15 years ago.

Download all attachments as: .zip

Change History (2)

by luroh, 15 years ago

Attachment: mail.png added

comment:1 by jonas.kirilla, 15 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev33991. Thanks!

Note: See TracTickets for help on using tickets.