Adding missing ellipsis in menu item, as suggested by Luroh in #4935. Thanks!

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@33991 a95241bf-73f2-0310-859d-f6bbb57e9c96